A script (.js) is added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <p>Esta página alojada el portafolio de proyectos de Nicolas Santiago Sosa Jimenez.</p>
 
+    <script src="/script.js"></script>
+
 </body>
 
 </html>
