--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1>Project Portfolio</h1>
+    <h1>Nicolas Sosa</h1>
 
     <p>Esta página alojada el portafolio de proyectos de Nicolas Santiago Sosa Jimenez.</p>
 
