se añade archivo gitignore

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
 
-    <h1>Nicolas Sosa</h1>
+    <h1>Portafolio de Nicolas</h1>
 
-    <p>Esta página alojada el portafolio de proyectos de Nicolas Santiago Sosa Jimenez.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde mollitia, impedit maxime, voluptatum laborum,
+        tempore aliquid saepe sapiente perspiciatis sit dolor quo eos hic deleniti. Rem, tempore est. Dolorum, soluta!
+    </p>
 
     <script src="/script.js"></script>
 
