se añade espacio de contenido y barra de navegación

--- a/index.html
+++ b/index.html
@@ -21,38 +21,18 @@
             <p id="button-start">Entrar al Portafolio</p>
         </div>
     </div>
+    
+    <div style="height: 0.1px;"></div>
 
-    <div>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti delectus cum exercitationem culpa itaque eum
-        eaque. Doloremque aperiam unde natus adipisci? Nihil placeat ullam esse animi. Molestias soluta doloribus ipsum!
-        Vitae placeat, rerum consectetur omnis eaque voluptatibus dignissimos quia similique dicta ipsa explicabo, quos
-        accusantium enim quidem nulla. Velit ducimus dignissimos laboriosam repellendus assumenda hic amet alias omnis
-        pariatur quae.
-        Quibusdam unde neque impedit at, nihil sequi magni in ab. Quaerat nisi, recusandae beatae nesciunt, vitae itaque
-        voluptates culpa harum doloremque cumque non. Expedita, id optio. Repudiandae nulla veniam temporibus!
-        Soluta excepturi dicta, tempore ducimus tenetur libero ab voluptatibus perferendis, at corrupti eius, iusto odio
-        facere. Rerum, id aspernatur? Unde corrupti exercitationem, repellendus eius quisquam ad aut error quos
-        distinctio?
-        Aliquam cum iusto fugit qui amet at. Corrupti repellendus voluptatum distinctio illo itaque autem nemo quod
-        facilis ab, quisquam ullam quis expedita suscipit illum vel maxime quidem quam saepe sunt.
-        Et suscipit consequuntur modi dignissimos quas dolorum a temporibus laudantium quo neque, doloribus
-        necessitatibus dolor fugit debitis sit rerum fuga alias libero ad? Illum quidem numquam inventore officiis ipsum
-        vero!
-        Eius aspernatur impedit distinctio ad laborum hic autem laboriosam esse magnam quas quod, quae odio! Obcaecati
-        neque alias incidunt expedita, reiciendis voluptas minus est, quos illo saepe, vero optio ipsam.
-        Cum corporis impedit id ullam corrupti, voluptate maiores repellat, doloribus perferendis voluptatibus soluta,
-        esse assumenda? Doloribus facilis, nihil ea deserunt ab doloremque ut exercitationem distinctio sequi et vitae
-        vel placeat!
-        Quo suscipit libero illo eaque, perferendis cum corporis, numquam tempora provident qui nobis nesciunt vero,
-        laboriosam temporibus fugit. Minus provident voluptate nesciunt soluta rerum tenetur error suscipit eligendi,
-        placeat iste.
-        Dicta iste aspernatur dignissimos eum dolore praesentium, libero molestias tempore placeat, voluptatibus at
-        reiciendis ab provident adipisci numquam amet. Itaque repellat omnis quos est similique maiores velit
-        praesentium reiciendis fuga?
-    </div>
+    <nav class="navegation">
+        barra de navegación
+    </nav>
 
+    <main>
 
-    <script src="/script.js"></script>
+    </main>
+
+    <script src="/js/script.js"></script>
 
 </body>
 
