Se ajusta tamaño de letra para celulares

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8">
     <title>Portafolio-Nicolas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/img/favicon-portafolio.png" type="image/x-icon">
@@ -23,9 +24,16 @@
     </div>
     
     <div style="height: 0.1px;"></div>
-
+    
     <nav class="navegation">
-        barra de navegación
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Proyectos</a></li>
+            <li><a href="#">Habilidades</a></li>
+            <li><a href="#">Currículum</a></li>
+            <li><a href="#">Certificaciones</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
     </nav>
 
     <main>
