Se añade havor a navegación

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <p id="button-start">Entrar al Portafolio</p>
         </div>
     </div>
-    
+
     <div style="height: 0.1px;"></div>
-    
+
     <nav class="navegation">
         <ul>
             <li><a href="#">Inicio</a></li>
@@ -37,7 +37,21 @@
     </nav>
 
     <main>
+        <div class="content">
+            <div class="rostro"></div>
+            <div class="presentation">
+                Hola, me llamo Nicolas Sosa y soy un ingeniero de sistemas y desarrollador de software Full Stack, mi
+                especialidad se encuentra en el manejo de tecnologías relacionadas con la creación de aplicaciones
+                empresariales, como lo pueden ser las plataformas de Spring Boot, Jakarta EE o .Net; utilizando
+                lenguajes de programación tales como: Java, C#, JavaScript, entre otros.
+                De igual importancia, cuento con conocimiento es bases de datos, computación en la nube, DevOps y
+                metodologías de trabajo.
+                Me emociona afrontar nuevos retos constantemente en la vida que me permitan crecer, aprender y enseñar a
+                los demás; me gusta emplear las mejoras prácticas en los proyectos que participo, logrando soluciones
+                sólidas, eficientes y escalables.
 
+            </div>
+        </div>
     </main>
 
     <script src="/js/script.js"></script>
