Se mejora la descrición de presentatción

--- a/index.html
+++ b/index.html
@@ -40,16 +40,20 @@
         <div class="content">
             <div class="rostro"></div>
             <div class="presentation">
-                Hola, me llamo Nicolas Sosa y soy un ingeniero de sistemas y desarrollador de software Full Stack, mi
-                especialidad se encuentra en el manejo de tecnologías relacionadas con la creación de aplicaciones
-                empresariales, como lo pueden ser las plataformas de Spring Boot, Jakarta EE o .Net; utilizando
-                lenguajes de programación tales como: Java, C#, JavaScript, entre otros.
-                De igual importancia, cuento con conocimiento es bases de datos, computación en la nube, DevOps y
-                metodologías de trabajo.
-                Me emociona afrontar nuevos retos constantemente en la vida que me permitan crecer, aprender y enseñar a
-                los demás; me gusta emplear las mejoras prácticas en los proyectos que participo, logrando soluciones
-                sólidas, eficientes y escalables.
+                Saludos, mi nombre es Nicolás Sosa y me desempeño como ingeniero de sistemas y desarrollador de software
+                Full Stack. Mi experiencia se centra en el manejo de tecnologías relacionadas con la creación de
+                aplicaciones empresariales, incluyendo plataformas como Spring Boot, Jakarta EE y .Net, utilizando
+                lenguajes de programación como Java, C# y JavaScript, entre otros.
 
+                Además de mi especialización técnica, poseo conocimientos sólidos en bases de datos, computación en la
+                nube, DevOps y metodologías de trabajo. Mi enfoque profesional se basa en enfrentar nuevos retos
+                constantemente, buscando oportunidades que me permitan crecer, aprender y compartir conocimientos.
+                Siempre me esfuerzo por aplicar las mejores prácticas en los proyectos en los que participo, asegurando
+                soluciones robustas, eficientes y escalables.
+
+                Estoy entusiasmado por contribuir a proyectos innovadores y desafiantes, y tengo un firme compromiso con
+                la mejora continua en el campo del desarrollo de software. Gracias por visitar mi perfil y espero tener
+                la oportunidad de colaborar en proyectos emocionantes.
             </div>
         </div>
     </main>
