Se cambia de grid el contenido y se añade un footer

--- a/index.html
+++ b/index.html
@@ -38,25 +38,30 @@
 
     <main>
         <div class="content">
-            <div class="rostro"></div>
+            <div class="rostro">
+
+            </div>
             <div class="presentation">
                 Saludos, mi nombre es Nicolás Sosa y me desempeño como ingeniero de sistemas y desarrollador de software
                 Full Stack. Mi experiencia se centra en el manejo de tecnologías relacionadas con la creación de
                 aplicaciones empresariales, incluyendo plataformas como Spring Boot, Jakarta EE y .Net, utilizando
-                lenguajes de programación como Java, C# y JavaScript, entre otros.
-
+                lenguajes de programación como Java, C#, JavaScript, entre otros.
                 Además de mi especialización técnica, poseo conocimientos sólidos en bases de datos, computación en la
                 nube, DevOps y metodologías de trabajo. Mi enfoque profesional se basa en enfrentar nuevos retos
                 constantemente, buscando oportunidades que me permitan crecer, aprender y compartir conocimientos.
                 Siempre me esfuerzo por aplicar las mejores prácticas en los proyectos en los que participo, asegurando
                 soluciones robustas, eficientes y escalables.
-
                 Estoy entusiasmado por contribuir a proyectos innovadores y desafiantes, y tengo un firme compromiso con
                 la mejora continua en el campo del desarrollo de software. Gracias por visitar mi perfil y espero tener
                 la oportunidad de colaborar en proyectos emocionantes.
             </div>
         </div>
     </main>
+
+    <footer>
+        <p>Derechos Reservados © 2024. BitsTeam.</p>
+        <p>Contácto nicosan12@hotmail.com</p>
+    </footer>
 
     <script src="/js/script.js"></script>
 
