--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
     <nav class="navegation">
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Proyectos</a></li>
-            <li><a href="#">Habilidades</a></li>
-            <li><a href="#">Currículum</a></li>
-            <li><a href="#">Certificaciones</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="/pages/experiencia.html">Experiencia</a></li>
+            <li><a href="/pages/proyectos.html">Proyectos</a></li>
+            <li><a href="/pages/certificaciones.html">Certificaciones</a></li>
+            <li><a href="/pages/sobre-mi.html">Sobre mí</a></li>
+            <li><a href="/pages/contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
@@ -42,18 +42,13 @@
 
             </div>
             <div class="presentation">
-                Saludos, mi nombre es Nicolás Sosa y me desempeño como ingeniero de sistemas y desarrollador de software
-                Full Stack. Mi experiencia se centra en el manejo de tecnologías relacionadas con la creación de
-                aplicaciones empresariales, incluyendo plataformas como Spring Boot, Jakarta EE y .Net, utilizando
-                lenguajes de programación como Java, C#, JavaScript, entre otros.
-                Además de mi especialización técnica, poseo conocimientos sólidos en bases de datos, computación en la
-                nube, DevOps y metodologías de trabajo. Mi enfoque profesional se basa en enfrentar nuevos retos
-                constantemente, buscando oportunidades que me permitan crecer, aprender y compartir conocimientos.
-                Siempre me esfuerzo por aplicar las mejores prácticas en los proyectos en los que participo, asegurando
-                soluciones robustas, eficientes y escalables.
-                Estoy entusiasmado por contribuir a proyectos innovadores y desafiantes, y tengo un firme compromiso con
-                la mejora continua en el campo del desarrollo de software. Gracias por visitar mi perfil y espero tener
-                la oportunidad de colaborar en proyectos emocionantes.
+                <p>
+                    Saludos, mi nombre es Nicolás Sosa y me desempeño como ingeniero de sistemas y desarrollador de
+                    software
+                    Full Stack. Mi experiencia se centra en el manejo de tecnologías relacionadas con la creación de
+                    aplicaciones empresariales, incluyendo plataformas como Spring Boot, Jakarta EE y .Net, utilizando
+                    lenguajes de programación como Java, C#, JavaScript, entre otros.
+                </p>
             </div>
         </div>
     </main>
