--- a/pages/certificaciones.html
+++ b/pages/certificaciones.html
@@ -18,18 +18,18 @@
 
     <nav class="navegation">
         <ul>
-            <li><a href="/index.html">Inicio</a></li>
-            <li><a href="/pages/experiencia.html">Experiencia</a></li>
-            <li><a href="/pages/proyectos.html">Proyectos</a></li>
-            <li><a href="/pages/certificaciones.html">Certificaciones</a></li>
-            <li><a href="/pages/sobre-mi.html">Sobre mí</a></li>
-            <li><a href="/pages/contacto.html">Contacto</a></li>
+            <li><a href="/index.html">Inicio <i class="fa-solid fa-house"></i></a></li>
+            <li><a href="/pages/experiencia.html">Experiencia <i class="fa-solid fa-briefcase"></i></a></li>
+            <li><a href="/pages/proyectos.html">Proyectos <i class="fa-solid fa-print"></i></a></li>
+            <li><a href="/pages/certificaciones.html">Certificaciones <i class="fa-solid fa-medal"></i></a></li>
+            <li><a href="/pages/sobre-mi.html">Sobre mí <i class="fa-solid fa-person"></i></a></li>
+            <li><a href="/pages/contacto.html">Contacto <i class="fa-solid fa-phone"></i></a></li>
         </ul>
     </nav>
 
     <main>
-        <p>Certificaciones</p>
-    </main>
+
+    </main> 
 
     <footer>
         <p>Derechos Reservados © 2024. BitsTeam.</p>
@@ -37,6 +37,7 @@
     </footer>
 
     <script src="/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/a292f49ca8.js" crossorigin="anonymous"></script>
 
 </body>
 
