avances de experiencia en Bext y marco

--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -18,7 +18,7 @@
 
     <nav class="navegation">
         <ul>
-            <li><a href="/index.html">Inicio <i class="fa-solid fa-house"></i></a></li>
+            <li><a href="/index.html?ocultar=true">Inicio <i class="fa-solid fa-house"></i></a></li>
             <li><a href="/pages/experiencia.html">Experiencia <i class="fa-solid fa-briefcase"></i></a></li>
             <li><a href="/pages/proyectos.html">Proyectos <i class="fa-solid fa-print"></i></a></li>
             <li><a href="/pages/certificaciones.html">Certificaciones <i class="fa-solid fa-medal"></i></a></li>
@@ -33,7 +33,28 @@
                 <div class="role">Analista funcional y Desarrollador Junior</div>
                 <div class="entity-name">(BEXTechnology S.A.S)</div>
                 <div class="working-time">2021 Marzo - Actualidad</div>
-            </div> 
+                <div class="body">
+                    <p>
+                        BexTechnology es una compañía desarrolladora, proveedora y administradora de soluciones
+                        tecnológicas, ofrece diversos servicios tales como desarrollo, ciencia de datos, ciberseguridad,
+                        nube, entre otros.
+                        Durante el tiempo que he pertenecido a esta compañía he participado en varios proyectos, en los
+                        cuales he desempeñado diversos roles especificados a continuación:
+                    </p>
+                    <ul>
+                        <li>
+                            Analista funcional: Elaboración de manuales de usuario, pruebas funcionales, actas de
+                            sesión, Azure DevOps (Boards y Test Plans).
+                        </li>
+                        <li>
+                            Desarrollador Junior: Soporte en administración de bases de datos SQL Server y MySQL,
+                            elaboración de manuales técnicos en infraestructuras de Azure y AWS, consultoría de Power
+                            Platform.
+                        </li>
+                    </ul>
+                    <p>Algunos de los proyectos en los que he participado son:</p>
+                </div>
+            </div>
         </div>
     </main>
 
