--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -18,7 +18,7 @@
 
     <nav class="navegation">
         <ul>
-            <li><a href="/index.html">Inicio <i class="fa-solid fa-house"></i></a></li>
+            <li><a href="/index.html?ocultar=true">Inicio <i class="fa-solid fa-house"></i></a></li>
             <li><a href="/pages/experiencia.html">Experiencia <i class="fa-solid fa-briefcase"></i></a></li>
             <li><a href="/pages/proyectos.html">Proyectos <i class="fa-solid fa-print"></i></a></li>
             <li><a href="/pages/certificaciones.html">Certificaciones <i class="fa-solid fa-medal"></i></a></li>
