Se mejora visualmente para que sea cuadrado el diseño

--- a/index.html
+++ b/index.html
@@ -44,13 +44,33 @@
 
             </div>
             <div class="presentation">
-                <p>
-                    Saludos, mi nombre es Nicolás Sosa y me desempeño como ingeniero de sistemas y desarrollador de
-                    software
-                    Full Stack. Mi experiencia se centra en el manejo de tecnologías relacionadas con la creación de
-                    aplicaciones empresariales, incluyendo plataformas como Spring Boot, Jakarta EE y .Net, utilizando
-                    lenguajes de programación como Java, C#, JavaScript, entre otros.
-                </p>
+                <div>
+                    <p>
+                        Saludos, mi nombre es Nicolás Sosa y me desempeño como ingeniero de sistemas y desarrollador de
+                        software
+                        Full Stack. Mi experiencia se centra en el manejo de tecnologías relacionadas con la creación de
+                        aplicaciones empresariales, incluyendo plataformas como Spring Boot, Jakarta EE y .Net,
+                        utilizando
+                        lenguajes de programación como Java, C#, JavaScript, entre otros.
+                    </p>
+                    <p id="second-p" class="desaparecer">
+                        Además de mi especialización técnica, poseo conocimientos sólidos en bases de datos, computación
+                        en
+                        la nube, DevOps y metodologías de trabajo. Mi enfoque profesional se basa en enfrentar nuevos
+                        retos
+                        constantemente, buscando oportunidades que me permitan crecer, aprender y compartir
+                        conocimientos.
+                        Siempre me esfuerzo por aplicar las mejores prácticas en los proyectos en los que participo,
+                        asegurando soluciones robustas, eficientes y escalables.
+                        Estoy entusiasmado por contribuir a proyectos innovadores y desafiantes, y tengo un firme
+                        compromiso
+                        con la mejora continua en el campo del desarrollo de software. Gracias por visitar mi perfil y
+                        espero tener la oportunidad de colaborar en proyectos emocionantes.
+
+                    </p>
+                    <span id="leer-mas" class="enlace"> Ver más</span>
+                </div>
+
             </div>
         </div>
     </main>
