Se mejoran los colores y se avanza en el acordeón

--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -55,10 +55,93 @@
                         </li>
                     </ul>
                     <p>Algunos de los proyectos en los que he participado son:</p>
+                    <div class="projects">
+                        <div class="project">
+                            <div class="head">
+                                <div class="name">Herramienta de Relatorías Fase 2</div>
+                                <div class="client">Superintendencia de Industria y Comercio</div>
+                            </div>
+                            <div class="p-body">
+                                <ul>
+                                    <li>
+                                        Objetivo: Implementar mejoras a la plataforma que permite optimizar el proceso
+                                        de las
+                                        relatorías realizadas por los abogados a partir de las providencias proferidas
+                                        por la
+                                        delegatura, visualizadas en un entorno privado y público.
+                                    </li>
+                                    <li>
+                                        Actividades: Elaborar manuales de usuario y ejecutar pruebas funcionales en
+                                        Azure Test Plans.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="head">
+                                <div class="name">Buscador de Actos Administrativos</div>
+                                <div class="client">Superintendencia de Industria y Comercio</div>
+                            </div>
+                            <div class="p-body">
+                                <ul>
+                                    <li>
+                                        Objetivo: Desarrollar una plataforma de gestión de Actos Administrativos para
+                                        lograr optimizar los procesos internos y externos representados en un entorno
+                                        privado y público.
+                                    </li>
+                                    <li>
+                                        Actividades: Elaborar manuales de usuario y ejecutar pruebas funcionales en
+                                        Azure Test Plans.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="head">
+                                <div class="name">Plataforma ANSV</div>
+                                <div class="client">Agencia Nacional de Seguridad Vial</div>
+                            </div>
+                            <div class="p-body">
+                                <ul>
+                                    <li>
+                                        Objetivo: Adquirir horas de implementación sobre productos de Micorosft (Power
+                                        Platform), para ejecutar los servicios integrales asociados al ciclo de vida de
+                                        ingenieria de software de la plataforma tecnológica ANSV del proyecto de
+                                        licencias de conductores de vehículos automotores, por medio de estrategia tipo
+                                        nube (iaas, paas, saas - low code).
+                                    </li>
+                                    <li>
+                                        Actividades: Elaborar manuales técnicos, diagramas de arquitectura e
+                                        infraestructura.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <div class="head">
+                                <div class="name">BestDoc</div>
+                                <div class="client">Producto propio de BexTechnology</div>
+                            </div>
+                            <div class="p-body">
+                                <ul>
+                                    <li>
+                                        Objetivo: Software SaaS de gestión electrónica para la creación, clasificación y
+                                        almacenamiento digital de documentos y expedientes empresariales.
+                                    </li>
+                                    <li>
+                                        Actividades: Desarrollar e Implementar mejoras para una aplicación
+                                        encargada de realizar migraciones masivas de expedientes y documentos hacia un
+                                        gestor documental, ejecutar pruebas y capacitaciones funcionales sobre el gestor
+                                        documental.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="experiences">
+        <!--<div class="experiences">
             <div class="content-experience">
                 <div class="head">
                     <div class="role">Analista funcional y Desarrollador Junior</div>
@@ -117,7 +200,7 @@
                     <p>Algunos de los proyectos en los que he participado son:</p>
                 </div>
             </div>
-        </div>
+        </div>-->
     </main>
 
     <footer>
