--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </nav>
 
     <main>
-        <h1 style="color: red; margin-left: 20px;">Página en desarrollo</h1>
-        <a style="margin-left: 20px;" href="https://github.com/narto12345">Repositorio de proyectos</a>
+        <h1 style="color: red; margin-left: 20px;">¡Página en desarrollo!</h1>
+        <a style="margin-left: 20px;" class="enlace" href="https://github.com/narto12345">Repositorio de proyectos</a>
         <div class="content">
             <div class="rostro">
 
@@ -47,27 +47,39 @@
                 <div>
                     <p>
                         Saludos, mi nombre es Nicolás Sosa y me desempeño como ingeniero de sistemas y desarrollador de
-                        software
-                        Full Stack. Mi experiencia se centra en el manejo de tecnologías relacionadas con la creación de
+                        software. Mi experiencia se centra en el manejo de tecnologías relacionadas con la creación de
                         aplicaciones empresariales, incluyendo plataformas como Spring Boot, Jakarta EE y .Net,
                         utilizando
                         lenguajes de programación como Java, C#, JavaScript, entre otros.
                     </p>
-                    <p id="second-p" class="desaparecer">
-                        Además de mi especialización técnica, poseo conocimientos sólidos en bases de datos, computación
-                        en
-                        la nube, DevOps y metodologías de trabajo. Mi enfoque profesional se basa en enfrentar nuevos
-                        retos
-                        constantemente, buscando oportunidades que me permitan crecer, aprender y compartir
-                        conocimientos.
-                        Siempre me esfuerzo por aplicar las mejores prácticas en los proyectos en los que participo,
-                        asegurando soluciones robustas, eficientes y escalables.
-                        Estoy entusiasmado por contribuir a proyectos innovadores y desafiantes, y tengo un firme
-                        compromiso
-                        con la mejora continua en el campo del desarrollo de software. Gracias por visitar mi perfil y
-                        espero tener la oportunidad de colaborar en proyectos emocionantes.
-
-                    </p>
+                    <div id="second-p" class="desaparecer">
+                        <p>
+                            Domino tecnologías como Spring para la creación de servicios web de tipo REST, vistas de
+                            presentación con Thymeleaf o JavaServer Pages, Seguridad con Spring Security JWT y
+                            persistencia
+                            con Spring Data JPA implementado con Hibernate o EclipseLink. Asimismo, tengo experiencia con
+                            Jakarta
+                            EE para elaborar y administrar soluciones del mismo hincapié de Spring y la capacidad
+                            implementar estas soluciones en Azure o AWS.
+                        </p>
+                        <p>
+                            Además de mi especialización técnica, poseo conocimientos sólidos en bases de datos,
+                            computación
+                            en
+                            la nube, DevOps y metodologías de trabajo. Mi enfoque profesional se basa en enfrentar
+                            nuevos
+                            retos
+                            constantemente, buscando oportunidades que me permitan crecer, aprender y compartir
+                            conocimientos.
+                            Siempre me esfuerzo por aplicar las mejores prácticas en los proyectos en los que participo,
+                            asegurando soluciones robustas, eficientes y escalables.
+                            Estoy entusiasmado por contribuir a proyectos innovadores y desafiantes, y tengo un firme
+                            compromiso
+                            con la mejora continua en el campo del desarrollo de software. Gracias por visitar mi perfil
+                            y
+                            espero tener la oportunidad de colaborar en proyectos emocionantes.
+                        </p>
+                    </div>
                     <span id="leer-mas" class="enlace"> Ver más</span>
                 </div>
 
