Se finaliza estilos para experiencia

--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
                             Domino tecnologías como Spring para la creación de servicios web de tipo REST, vistas de
                             presentación con Thymeleaf o JavaServer Pages, Seguridad con Spring Security JWT y
                             persistencia
-                            con Spring Data JPA implementado con Hibernate o EclipseLink. Asimismo, tengo experiencia con
+                            con Spring Data JPA implementado con Hibernate o EclipseLink. Asimismo, tengo experiencia
+                            con
                             Jakarta
-                            EE para elaborar y administrar soluciones del mismo hincapié de Spring y la capacidad
+                            EE para elaborar y administrar soluciones del mismo hincapié de Spring y la capacidad de
                             implementar estas soluciones en Azure o AWS.
                         </p>
                         <p>
