--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -30,26 +30,28 @@
     <main>
         <div class="experiences">
             <div class="content-experience">
-                <div class="head">
-                    <div class="role">Analista funcional y Desarrollador Junior</div>
-                    <div class="entity-name">(BEXTechnology S.A.S)</div>
-                    <div class="working-time">2021 Marzo - Actualidad</div>
+                <div class="head-experience">
+                    <div class="logo-company"></div>
+                    <div class="information">
+                        <div class="role">Analista funcional y Desarrollador Junior</div>
+                        <div class="entity-name">(BEXTechnology S.A.S)</div>
+                        <div class="working-time">2021 Marzo - Actualidad</div>
+                    </div>
                 </div>
                 <div class="body">
                     <p>
                         BexTechnology es una compañía desarrolladora, proveedora y administradora de soluciones
                         tecnológicas, ofrece diversos servicios tales como desarrollo, ciencia de datos, ciberseguridad,
                         nube, entre otros.
-                        Durante el tiempo que he pertenecido a esta compañía he participado en varios proyectos, en los
-                        cuales he desempeñado diversos roles especificados a continuación:
+                        Durante mi instancia he desempaño diversos roles como:
                     </p>
                     <ul>
                         <li>
-                            Analista funcional: Elaboración de manuales de usuario, pruebas funcionales, actas de
+                            <b>Analista funcional:</b> Elaboración de manuales de usuario, pruebas funcionales, actas de
                             sesión, Azure DevOps (Boards y Test Plans).
                         </li>
                         <li>
-                            Desarrollador Junior: Soporte en administración de bases de datos SQL Server y MySQL,
+                            <b>Desarrollador Junior:</b> Soporte en administración de bases de datos SQL Server y MySQL,
                             elaboración de manuales técnicos en infraestructuras de Azure y AWS, consultoría de Power
                             Platform.
                         </li>
@@ -64,14 +66,16 @@
                             <div class="p-body">
                                 <ul>
                                     <li>
-                                        Objetivo: Implementar mejoras a la plataforma que permite optimizar el proceso
+                                        <b>Objetivo:</b> Implementar mejoras a la plataforma que permite optimizar el
+                                        proceso
                                         de las
                                         relatorías realizadas por los abogados a partir de las providencias proferidas
                                         por la
                                         delegatura, visualizadas en un entorno privado y público.
                                     </li>
                                     <li>
-                                        Actividades: Elaborar manuales de usuario y ejecutar pruebas funcionales en
+                                        <b>Actividades:</b> Elaborar manuales de usuario y ejecutar pruebas funcionales
+                                        en
                                         Azure Test Plans.
                                     </li>
                                 </ul>
@@ -85,12 +89,14 @@
                             <div class="p-body">
                                 <ul>
                                     <li>
-                                        Objetivo: Desarrollar una plataforma de gestión de Actos Administrativos para
+                                        <b>Objetivo:</b> Desarrollar una plataforma de gestión de Actos Administrativos
+                                        para
                                         lograr optimizar los procesos internos y externos representados en un entorno
                                         privado y público.
                                     </li>
                                     <li>
-                                        Actividades: Elaborar manuales de usuario y ejecutar pruebas funcionales en
+                                        <b>Actividades:</b> Elaborar manuales de usuario y ejecutar pruebas funcionales
+                                        en
                                         Azure Test Plans.
                                     </li>
                                 </ul>
@@ -104,14 +110,15 @@
                             <div class="p-body">
                                 <ul>
                                     <li>
-                                        Objetivo: Adquirir horas de implementación sobre productos de Micorosft (Power
+                                        <b>Objetivo:</b> Adquirir horas de implementación sobre productos de Micorosft
+                                        (Power
                                         Platform), para ejecutar los servicios integrales asociados al ciclo de vida de
                                         ingenieria de software de la plataforma tecnológica ANSV del proyecto de
                                         licencias de conductores de vehículos automotores, por medio de estrategia tipo
                                         nube (iaas, paas, saas - low code).
                                     </li>
                                     <li>
-                                        Actividades: Elaborar manuales técnicos, diagramas de arquitectura e
+                                        <b>Actividades:</b> Elaborar manuales técnicos, diagramas de arquitectura e
                                         infraestructura.
                                     </li>
                                 </ul>
@@ -125,11 +132,12 @@
                             <div class="p-body">
                                 <ul>
                                     <li>
-                                        Objetivo: Software SaaS de gestión electrónica para la creación, clasificación y
+                                        <b>Objetivo:</b> Software SaaS de gestión electrónica para la creación,
+                                        clasificación y
                                         almacenamiento digital de documentos y expedientes empresariales.
                                     </li>
                                     <li>
-                                        Actividades: Desarrollar e Implementar mejoras para una aplicación
+                                        <b>Actividades:</b> Desarrollar e Implementar mejoras para una aplicación
                                         encargada de realizar migraciones masivas de expedientes y documentos hacia un
                                         gestor documental, ejecutar pruebas y capacitaciones funcionales sobre el gestor
                                         documental.
@@ -141,66 +149,6 @@
                 </div>
             </div>
         </div>
-        <!--<div class="experiences">
-            <div class="content-experience">
-                <div class="head">
-                    <div class="role">Analista funcional y Desarrollador Junior</div>
-                    <div class="entity-name">(BEXTechnology S.A.S)</div>
-                    <div class="working-time">2021 Marzo - Actualidad</div>
-                </div>
-                <div class="body">
-                    <p>
-                        BexTechnology es una compañía desarrolladora, proveedora y administradora de soluciones
-                        tecnológicas, ofrece diversos servicios tales como desarrollo, ciencia de datos, ciberseguridad,
-                        nube, entre otros.
-                        Durante el tiempo que he pertenecido a esta compañía he participado en varios proyectos, en los
-                        cuales he desempeñado diversos roles especificados a continuación:
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi, nulla ex pariatur harum
-                        ducimus alias modi molestiae quae doloribus, temporibus molestias necessitatibus quibusdam at
-                        odit inventore aliquam porro ea. Labore!
-                        Soluta, hic voluptatibus id labore molestias iusto nesciunt unde excepturi ipsa saepe recusandae
-                        animi culpa laborum ipsum qui ullam modi assumenda? Iusto quaerat necessitatibus delectus
-                        aperiam rerum iste nostrum blanditiis.
-                        Minima molestiae praesentium eligendi pariatur! Nemo reiciendis atque qui rerum blanditiis
-                        debitis officia animi, corrupti tenetur eaque, aspernatur, neque placeat. In, quidem. Sint,
-                        aspernatur incidunt. Dolorem numquam ad harum odit.
-                        Voluptate dolores excepturi labore dolore quisquam non consectetur exercitationem. Hic,
-                        praesentium? Facilis illum amet velit totam corporis commodi voluptatem illo, quae est, eum
-                        laborum neque ipsa, excepturi harum reprehenderit similique?
-                        Sequi doloribus, quidem perferendis molestiae iure tenetur nam quas deleniti totam hic voluptas
-                        accusamus quis ducimus dolore voluptatum nesciunt ipsa minus nemo atque doloremque? Perspiciatis
-                        quisquam fugit quae blanditiis ratione?
-                        Dolorum magni neque quis et excepturi sed, delectus rerum, illo fuga nihil repellendus? Tempore
-                        reprehenderit nihil debitis repellat assumenda, est culpa temporibus, molestias voluptates
-                        nostrum illum, labore dolorum non pariatur.
-                        Facilis cumque ut aut vero quibusdam incidunt labore aliquid aspernatur aperiam, mollitia
-                        aliquam nobis voluptatibus, quasi praesentium assumenda id velit eum dolore reprehenderit eius!
-                        Quae, quam. Dicta eos velit soluta.
-                        Fugit, error natus? Repellendus excepturi laboriosam beatae in provident quod nesciunt rerum
-                        itaque earum amet ipsam quisquam deserunt, laborum dolorum. Placeat quis id suscipit eos quo
-                        assumenda officiis, expedita quae!
-                        Laborum cumque soluta illum inventore eligendi excepturi voluptate temporibus magni. Ipsum
-                        molestias non reprehenderit rerum dolor accusamus iure saepe iusto eaque. Nemo quia ad iure modi
-                        placeat enim quas commodi!
-                        Dignissimos labore autem praesentium magnam adipisci? Repellat tempora a eligendi, animi,
-                        ratione possimus facere harum voluptas, iure quibusdam assumenda! Alias animi illum qui nostrum
-                        fugit quibusdam eius id iusto cupiditate!
-                    </p>
-                    <ul>
-                        <li>
-                            Analista funcional: Elaboración de manuales de usuario, pruebas funcionales, actas de
-                            sesión, Azure DevOps (Boards y Test Plans).
-                        </li>
-                        <li>
-                            Desarrollador Junior: Soporte en administración de bases de datos SQL Server y MySQL,
-                            elaboración de manuales técnicos en infraestructuras de Azure y AWS, consultoría de Power
-                            Platform.
-                        </li>
-                    </ul>
-                    <p>Algunos de los proyectos en los que he participado son:</p>
-                </div>
-            </div>
-        </div>-->
     </main>
 
     <footer>
