Se implementa un carrusel en el main

--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
     </nav>
 
     <main>
-        <h1 style="color: red; margin-left: 20px;">¡Página en desarrollo!</h1>
-        <a style="margin-left: 20px;" class="enlace" href="https://github.com/narto12345">Repositorio de proyectos</a>
         <div class="content">
             <div class="rostro">
 
@@ -52,38 +50,64 @@
                         utilizando
                         lenguajes de programación como Java, C#, JavaScript, entre otros.
                     </p>
-                    <div id="second-p" class="desaparecer">
-                        <p>
-                            Domino tecnologías como Spring para la creación de servicios web de tipo REST, vistas de
-                            presentación con Thymeleaf o JavaServer Pages, Seguridad con Spring Security JWT y
-                            persistencia
-                            con Spring Data JPA implementado con Hibernate o EclipseLink. Asimismo, tengo experiencia
-                            con
-                            Jakarta
-                            EE para elaborar y administrar soluciones del mismo hincapié de Spring y la capacidad de
-                            implementar estas soluciones en Azure o AWS.
-                        </p>
-                        <p>
-                            Además de mi especialización técnica, poseo conocimientos sólidos en bases de datos,
-                            computación
-                            en
-                            la nube, DevOps y metodologías de trabajo. Mi enfoque profesional se basa en enfrentar
-                            nuevos
-                            retos
-                            constantemente, buscando oportunidades que me permitan crecer, aprender y compartir
-                            conocimientos.
-                            Siempre me esfuerzo por aplicar las mejores prácticas en los proyectos en los que participo,
-                            asegurando soluciones robustas, eficientes y escalables.
-                            Estoy entusiasmado por contribuir a proyectos innovadores y desafiantes, y tengo un firme
-                            compromiso
-                            con la mejora continua en el campo del desarrollo de software. Gracias por visitar mi perfil
-                            y
-                            espero tener la oportunidad de colaborar en proyectos emocionantes.
-                        </p>
-                    </div>
                     <span id="leer-mas" class="enlace"> Ver más</span>
                 </div>
 
+            </div>
+            <div class="row-3">
+                <div id="second-p" class="desaparecer">
+                    <p>
+                        Domino tecnologías como Spring para la creación de servicios web de tipo REST, vistas de
+                        presentación con Thymeleaf o JavaServer Pages, Seguridad con Spring Security JWT y
+                        persistencia
+                        con Spring Data JPA implementado con Hibernate o EclipseLink. Asimismo, tengo experiencia
+                        con
+                        Jakarta
+                        EE para elaborar y administrar soluciones del mismo hincapié de Spring, y la capacidad de
+                        implementar estas soluciones en Azure o AWS.
+                    </p>
+                    <p>
+                        Además de mi especialización técnica, poseo conocimientos sólidos en bases de datos,
+                        computación
+                        en
+                        la nube, DevOps y metodologías de trabajo. Mi enfoque profesional se basa en enfrentar
+                        nuevos
+                        retos
+                        constantemente, buscando oportunidades que me permitan crecer, aprender y compartir
+                        conocimientos.
+                        Siempre me esfuerzo por aplicar las mejores prácticas en los proyectos en los que participo,
+                        asegurando soluciones robustas, eficientes y escalables.
+                        Estoy entusiasmado por contribuir a proyectos innovadores y desafiantes, y tengo un firme
+                        compromiso
+                        con la mejora continua en el campo del desarrollo de software. Gracias por visitar mi perfil
+                        y
+                        espero tener la oportunidad de colaborar en proyectos emocionantes.
+                    </p>
+                </div>
+            </div>
+            <div id="carousel-main" class="carousel-container desaparecer">
+                <div class="carousel">
+                    <img src="/img/spring-framework.png" alt="spring-framework">
+                    <img src="/img/spring-boot.png" alt="spring-boot">
+                    <img src="/img/dotnet.svg" alt="dotnet">
+                    <img src="/img/asp-dotnet-core.png" alt="asp-dotnet-core">
+                    <img src="/img/sql-server.svg" alt="sql-server">
+                    <img src="/img/mysql.png" alt="mysql">
+                    <img src="/img/jakarta-ee.png" alt="jakarta-ee">
+                    <img src="/img/java-ee.png" alt="java-ee">
+                    <img src="/img/oracle-db.png" alt="oracle-db">
+                    <img src="/img/sqlite.png" alt="sqlite">
+                    <img src="/img/spring-framework.png" alt="spring-framework">
+                    <img src="/img/spring-boot.png" alt="spring-boot">
+                    <img src="/img/dotnet.svg" alt="dotnet">
+                    <img src="/img/asp-dotnet-core.png" alt="asp-dotnet-core">
+                    <img src="/img/sql-server.svg" alt="sql-server">
+                    <img src="/img/mysql.png" alt="mysql">
+                    <img src="/img/jakarta-ee.png" alt="jakarta-ee">
+                    <img src="/img/java-ee.png" alt="java-ee">
+                    <img src="/img/oracle-db.png" alt="oracle-db">
+                    <img src="/img/sqlite.png" alt="sqlite">
+                </div>
             </div>
         </div>
     </main>
