--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -35,7 +35,7 @@
                     <div class="information">
                         <div class="role">Analista funcional y Desarrollador Junior</div>
                         <div class="entity-name">(BEXTechnology S.A.S)</div>
-                        <div class="working-time">2021 Marzo - Actualidad</div>
+                        <div class="working-time">2021 Agosto - Actualidad</div>
                     </div>
                 </div>
                 <div class="body">
