--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -28,7 +28,10 @@
     </nav>
 
     <main>
-        
+        <h1 style="color: red; margin-left: 20px;">¡Página en desarrollo!</h1>
+        <p>El siguiente enlace lo redirigirá a mi repositorio de proyectos en GitHub:</p>
+        <a style="margin-left: 20px;" target="_blank" class="enlace" href="https://github.com/narto12345">Repositorio de
+            proyectos</a>
     </main>
 
     <footer>
