--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style-projects.css">
     <link rel="shortcut icon" href="/img/favicon-portafolio.png" type="image/x-icon">
 
 </head>
@@ -28,10 +29,85 @@
     </nav>
 
     <main>
-        <h1 style="color: red; margin-left: 20px;">¡Página en desarrollo!</h1>
+        <!-- <h1 style="color: red; margin-left: 20px;">¡Página en desarrollo!</h1>
         <p>El siguiente enlace lo redirigirá a mi repositorio de proyectos en GitHub:</p>
         <a style="margin-left: 20px;" target="_blank" class="enlace" href="https://github.com/narto12345">Repositorio de
-            proyectos</a>
+            proyectos</a> -->
+        <div class="projects-p">
+            <div class="project-p">
+                <div class="name-project-p">
+                    Sistema Administrador de Proyectos - Razor Pages
+                </div>
+                <div class="technologies">
+                    <div class="technology">
+                        <img src="/img/asp-dotnet-core.png" alt="asp-dotnet-core">
+                    </div>
+                    <div class="technology">
+                        <img src="/img/entity-fw.png" alt="entity-fw">
+                    </div>
+                    <div class="technology">
+                        <img src="/img/mysql.png" alt="mysql">
+                    </div>
+                </div>
+            </div>
+            <div class="project-p">
+                <div class="name-project-p">
+                    API RESTful - JAX-RS
+                </div>
+                <div class="technologies">
+                    <div class="technology">
+                        <img src="/img/javaee-square.png" alt="java-ee">
+                    </div>
+                    <div class="technology">
+                        <img src="/img/JavaScript.png" alt="JavaScript">
+                    </div>
+                    <div class="technology">
+                        <img src="/img/mysql.png" alt="mysql">
+                    </div>
+                </div>
+            </div>
+            <div class="project-p">
+                <div class="name-project-p">
+                    Mi Directorio - Java Swing
+                </div>
+                <div class="technologies">
+                    <div class="technology">
+                        <img src="/img/javase.png" alt="javase">
+                    </div>
+                    <div class="technology">
+                        <img src="/img/java-jdbc.png" alt="JavaScript">
+                    </div>
+                    <div class="technology">
+                        <img src="/img/mysql.png" alt="mysql">
+                    </div>
+                </div>
+            </div>
+            <div class="project-p">
+                <div class="name-project-p">
+                    Sistema de Gestión de Tareas
+                </div>
+                <div class="technologies">
+                    <div class="technology">
+                        <img src="/img/dotnet.svg" alt="dotnet">
+                    </div>
+                    <div class="technology">
+                        <img src="/img/console.png" alt="console">
+                    </div>
+                    <div class="technology">
+                        <img src="/img/archivo-txt.png" alt="archivo-txt">
+                    </div>
+                </div>
+            </div>
+            <div class="project-p">
+
+            </div>
+            <div class="project-p">
+
+            </div>
+            <div class="project-p">
+
+            </div>
+        </div>
     </main>
 
     <footer>
